# pos_django_cafe

./: .gitignore  Dockerfile  README.md  manage.py  pyproject.toml
pos_django_cafe/: asgi.py  settings.py  urls.py  wsgi.py
pos_django_cafe/apps/core/: models.py  serializers.py  urls.py  views.py
pos_django_cafe/apps/core/migrations/: 0001_initial.py  0002_orderstatus_alter_order_items_and_more.py  0003_alter_order_items_alter_orderstatus_description.py
pos_django_cafe/tests/: test_orders.py
templates/: create_order.html  header.html  index.html  orders.html
